<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, SKIT!</string>
    <string name="app_name">SchoolKit</string>
    <string name="ChUr">Choose Your Subject</string>
    <string name="Math">Math</string>
    <string name="Hist">History</string>
    <string name="Languages">Languages</string>
    <string name="English">English</string>
    <string name="Science">Science</string>
    <string name="Donate">Donate</string>
    <string name="Bug">Report A Bug</string>

</resources>